# CMakeTemplate

./: .devcontainer  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  devenv.code-workspace
app/: CMakeLists.txt
cmake/: Warnings.cmake  crossarmv6l.cmake  crossraspi_4-64.cmake  crossraspi_5-64.cmake
script/: copy_to_target.sh
